--- a/.github/workflows/build_dev.yml
+++ b/.github/workflows/build_dev.yml
@@ -2,9 +2,9 @@ name: Build CI
 
 on:
   push:
-    branches: ["dev"]
+    branches: [nosym"]
   pull_request:
-    branches: ["dev"]
+    branches: ["nosym"]
 
 jobs:
   Build-kpimg:
